--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: AskaJohnny #Your awesome title
+title: Misha #Your awesome title
 email: #youremail@domain.com
 description: > # this means to ignore newlines until "baseurl"
   Write an awesome description for your new site here. You can edit this
@@ -20,10 +20,10 @@ cusdis:
     app_id: #your cusdis app_id
 
 user:
-  name: Johnny
-  pic: /assets/img/header.jpeg
-  picAlt: "Johnny"
-  job: 个人博客
+  name: Misha
+  pic: /assets/img/header.jpg
+  picAlt: "Misha"
+  job: 个人网站
   aboutme: false # comment this out if you don't need the 'about' page.
 
 exclude:
